--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -1,40 +1,32 @@
-/* @font-face {
-  font-family: "Intro Bold";
+@font-face {
+  font-family: "Open sansLight";
   font-style: normal;
-  font-weight: 700;
+  font-weight: 300;
   font-display: swap;
-  src: local(""), url("../fontsWhoosh/Intro-Bold.woff") format("woff"),
-    url("../fontsWhoosh/Intro-Bold.ttf") format("truetype");
+  src: local(""),
+    url("../../components/fonts/OpenSans-Light.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Intro Book Italic";
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-  src: local(""), url("../fontsWhoosh/Intro-Book-Italic.woff") format("woff"),
-    url("../fontsWhoosh/Intro-Book-Italic.ttf") format("truetype");
-}
-@font-face {
-  font-family: "Intro Book";
+  font-family: "Open sans";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local(""), url("../fontsWhoosh/Intro-Book.woff") format("woff"),
-    url("../fontsWhoosh/Intro-Book.ttf") format("truetype");
+  src: local(""),
+    url("../../components/fonts/OpenSans-Regular.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Intro Light";
+  font-family: "RubikMedium";
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   font-display: swap;
-  src: local(""), url("../fontsWhoosh/Intro-Light.woff") format("woff"),
-    url("../fontsWhoosh/Intro-Light.ttf") format("truetype");
+  src: local(""),
+    url("../../components/fonts/Rubik-Medium.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Intro Regular";
+  font-family: "RubikBold";
   font-style: normal;
-  font-weight: 400;
+  font-weight: 600;
   font-display: swap;
-  src: local(""), url("../fontsWhoosh/Intro-Regular.woff") format("woff"),
-    url("../fontsWhoosh/Intro-Regular.ttf") format("truetype");
-} */
+  src: local(""),
+    url("../../components/fonts/Rubik-SemiBold.ttf") format("truetype");
+}
