--- a/app/styles/vars.css
+++ b/app/styles/vars.css
@@ -1,9 +1,6 @@
 :root {
-  --background-main: #f8faff;
-  --color-dark-blue: #1d253c;
-  --color-light-blue: #c2d2f4;
-  --color-blue: #2b6bf3;
-  --color-white: #fff;
-  --yellow: #ffdd2d;
-  --text-color: #666;
+  --text-color: #eef3ff;
+  --hover-color: #2d76f9;
+
+  --width-container: 1240px;
 }
