--- a/components/Header/index.module.scss
+++ b/components/Header/index.module.scss
@@ -1,5 +1,32 @@
 .header {
-  background-color: blanchedalmond;
-  width: 100%;
   height: 100px;
+
+  &__container {
+    width: var(--width-container);
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+  }
+  &__navigation {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+  }
+  &__link {
+    text-decoration: none;
+    cursor: pointer;
+    color: var(--text-color);
+  }
+  &__logo {
+    &:hover * {
+      fill: var(--hover-color);
+    }
+    & path {
+      transition: fill 0.4s ease;
+    }
+    & path {
+      fill: var(--text-color);
+    }
+  }
 }
