--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -3,6 +3,7 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
+  line-height: normal;
   src: local(""),
     url("../../components/fonts/OpenSans-Light.ttf") format("truetype");
 }
@@ -11,6 +12,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
+  line-height: normal;
   src: local(""),
     url("../../components/fonts/OpenSans-Regular.ttf") format("truetype");
 }
@@ -19,6 +21,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
+  line-height: normal;
   src: local(""),
     url("../../components/fonts/Rubik-Medium.ttf") format("truetype");
 }
@@ -27,6 +30,16 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
+  line-height: normal;
   src: local(""),
     url("../../components/fonts/Rubik-SemiBold.ttf") format("truetype");
+}
+@font-face {
+  font-family: "RubikLight";
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  line-height: normal;
+  src: local(""),
+    url("../../components/fonts/Rubik-Light.ttf") format("truetype");
 }
