--- a/components/Header/index.module.scss
+++ b/components/Header/index.module.scss
@@ -7,23 +7,44 @@
     margin: 0 auto;
     display: flex;
     align-items: center;
+    justify-content: space-between;
   }
   &__navigation {
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 100px;
+    margin-left: 30px;
   }
   &__link {
     text-decoration: none;
     cursor: pointer;
     color: var(--text-color);
+    font-family: RubikLight;
+    font-size: 18px;
+    line-height: normal;
+    position: relative;
+    &::after {
+      display: block;
+      position: absolute;
+      left: 50%;
+      width: 0;
+      height: 1.2px;
+      background-color: var(--hover-color);
+      content: "";
+      transition: 0.3s ease-out;
+    }
+    &:hover:after {
+      left: 0;
+      width: 100%;
+    }
   }
+
   &__logo {
     &:hover * {
       fill: var(--hover-color);
     }
     & path {
-      transition: fill 0.4s ease;
+      transition: fill 0.3s ease;
     }
     & path {
       fill: var(--text-color);
