Added favicon and font

--- a/components/Header/index.module.scss
+++ b/components/Header/index.module.scss
@@ -19,7 +19,7 @@
     text-decoration: none;
     cursor: pointer;
     color: var(--text-color);
-    font-family: RubikLight;
+    font-family: Rubik;
     font-size: 18px;
     line-height: normal;
     position: relative;
