Added projects page

--- a/app/projects/page.module.scss
+++ b/app/projects/page.module.scss
@@ -24,7 +24,7 @@
       content: "";
       transition: 0.3s ease-out;
     }
-    &:hover:after {
+    &:hover::after {
       width: 100%;
     }
   }
