--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   flex: 1 1 auto;
+  margin-top: 110px;
 }
 
 .body {
@@ -13,7 +14,7 @@
     #242530 100%
   );
   color: var(--text-color);
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
