--- a/components/Header/index.module.scss
+++ b/components/Header/index.module.scss
@@ -5,7 +5,7 @@
   position: absolute;
   top: 0;
   transform: translateY(0);
-  transition: height 0.2s, transform 0.2s, background-color 0.2s;
+  transition: transform 0.3s, background-color 0.2s;
   z-index: 30;
 
   &__scrollDown {
