--- a/components/Header/ThemeSwitcher/index.module.scss
+++ b/components/Header/ThemeSwitcher/index.module.scss
@@ -4,6 +4,9 @@
     height: 32px;
     position: relative;
     width: 62px;
+    @include mobile-small {
+      display: none;
+    }
 
     &_active .header__themeSwitcherCircle {
       transform: translateX(30px);
