Edit css mobile

--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -3,6 +3,9 @@
   justify-content: center;
   flex: 1 1 auto;
   margin-top: 110px;
+  @include small-laptop {
+    margin-top: 70px;
+  }
 }
 
 .body {
