--- a/app/projects/FilterButtons/index.module.scss
+++ b/app/projects/FilterButtons/index.module.scss
@@ -2,6 +2,9 @@
   width: 100%;
   height: auto;
   margin-top: 84px;
+  @include tablet {
+    margin-top: 42px;
+  }
   &__ul {
     display: flex;
     gap: 30px;
@@ -24,6 +27,9 @@
       color: #303958;
     }
     transition: background-color 0.3s, color 0.3s;
+    @include tablet {
+      font-size: 12px;
+    }
   }
   &__buttonActive {
     background-color: #2d76f9;
