--- a/app/projects/ProgectCard/index.module.scss
+++ b/app/projects/ProgectCard/index.module.scss
@@ -27,6 +27,9 @@
     margin-left: 29px;
     text-decoration: none;
     z-index: 4;
+    @include tablet {
+      font-size: 18px;
+    }
   }
   &__description {
     color: #fff;
@@ -38,6 +41,9 @@
     text-decoration: none;
     max-width: 300px;
     z-index: 4;
+    @include tablet {
+      font-size: 13px;
+    }
   }
   &::after {
     background-image: linear-gradient(
