--- a/app/projects/FilterButtons/index.module.scss
+++ b/app/projects/FilterButtons/index.module.scss
@@ -16,7 +16,7 @@
     border: 0;
     box-shadow: 0px 14px 61px 0px rgba(23, 27, 44, 0.75);
     color: var(--text-color);
-    font-family: Rubik;
+    font-family: var(--font-rubik-regular);
     font-size: 20px;
     font-style: normal;
     font-weight: 300;
