--- a/components/Footer/index.module.scss
+++ b/components/Footer/index.module.scss
@@ -13,7 +13,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    font-family: Open Sans;
+    font-family: var(--font-open-sans);
     font-size: 16px;
     line-height: normal;
     flex-wrap: wrap;
